fixed program nav links on mobile

--- a/src/styles/program-navigation.css
+++ b/src/styles/program-navigation.css
@@ -371,7 +371,7 @@ NOTE: the style classes below cause issues with bullet points for ul elements. T
 } */
 
 .program-menu a.program_menu_item {
-  color: white;
+  /* color: white; */
 }
 
 .login-button, .logout-button {
